<resources>
    <string name="app_name">TableOfAnnouncements</string>
    <!--Menu Drawer Strings -->
    <string name="new_ad">Объявления</string>

    <string name="an_cat1">Объявления</string>
    <string name="an_my_ans">Мои объявления</string>
    <string name="an_car">Машины</string>
    <string name="an_pc">Компьютеры</string>
    <string name="an_smartphone">Смартфоны</string>
    <string name="an_dm">Бытовая техника</string>

    <string name="an_cat2">Аккаунт</string>
    <string name="an_sign_up">Регистрация</string>
    <string name="an_sign_in">Войти</string>
    <string name="an_out">Выйти</string>

    <!-- Data and sign_in_up_out-->
    <string name="default_web_client_id">677705367036-9ji70ur8sem521kkpi7kccfjmft0hlmb.apps.googleusercontent.com</string>
    <string name="email">kalaczynskibo@gmail.com</string>
    <string name="not_reg">Войдите или зарегистрируйтесь</string>
    <string name="email_hint">Введите вашу почту</string>
    <string name="password_hint">Введите ваш пароль</string>
    <string name="sign_up_action">Зарегистрироваться</string>
    <string name="sign_in_action">Войти</string>
    <string name="forget_password_action">Забыли пароль?</string>
    <string name="sign_up_error">Не удалось зарегистрироваться!</string>
    <string name="sign_in_error">Не удалось войти!</string>
    <string name="sign_up_success">Вы успешно зарегистрировались!</string>
    <string name="sign_in_success">Вы успешно зашли!</string>
    <string name="email_verification_message">На Вашу почту было отправлено письмо для подтверждения!</string>
    <string name="email_verification_error">Не удалось отправить письмо для подтверждения на Вашу почту!</string>
    <string name="password_reset_message">На Вашу почту было отправлено письмо для восстановления пароля!</string>
    <string name="password_reset_error">Не удалось отправить письмо для восстановления пароля!</string>
    <string name="enter_your_email">Пожалуйста, введите вашу почту для восстановления!</string>
    <string name="link_done">Почта успешно подключена к Google аккаунту!</string>
    <string name="enter_for_ling_to_Google">У вас уже есть аккаунт, который зарегистрирован на этот Email адресс, войдите в Ваш аккаунт Google, чтобы подвязать две учетные записи.</string>


    <string name="no_result">no result</string>

    <string name="open">Открытый</string>
    <string name="close">Закрытый</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="select_country">Выберите страну</string>
    <string name="select_city">Выберите город</string>

    <string name="added_soon">Скоро здесь будут объявления!</string>
    <string name="edit_photos">Выберите поочередность фотографий</string>
    <string name="create_ad">Создать объявление</string>

    <string name="accept">Подтвердить</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить все фото</string>
    <string name="select">Выберите фото</string>
    <string name="cancel">отменить</string>
    <string name="change">изм.</string>
    <string name="loading">Загрузка...</string>

    <string name="banner_id">ca-app-pub-3940256099942544/9214589741</string>
    <string name="interstitial_id">ca-app-pub-3940256099942544/1033173712</string>


    <string name="ads_title_hint">Укажите название*</string>
    <string name="ads_price_title">Цена*</string>
    <string name="ads_title_helper">Введите как минимум 15 символов</string>
    <string name="ads_category_title">Категория*</string>
    <string name="ads_category_select">Выберите категорию</string>
    <string name="ads_description_hint">Описание*</string>
    <string name="ads_description_helper">Введите как минимум 30 символов</string>
    <string name="ads_location">Локация*</string>
    <string name="personal_info">Ваши контактные данные</string>
    <string name="person_name">Имя*</string>
    <string name="person_email">Email-адрес*</string>
    <string name="person_number">Номер телефона*</string>
    <string name="ads_create">Опубликовать</string>

    <string name="all_count_for_title">/60</string>

    <string name="all_count_for_description">/1000</string>
    <string name="uah_currency">UAH</string>

    <string name="fill_error">Заполните корректно все поля</string>
    <string name="success_d">Успех</string>
    <string name="success_okay">Окей</string>
    <string name="success_d_text">Ваше объявление было успешно опубликовано!</string>

    <string name="notebook_banner">Ноутбуки для офиса и домашнего использования</string>
    <string name="car_banner">Новые машины и машины с пробегом</string>
    <string name="phone_banner">Современные смартфоны и кнопочные телефоны</string>

    <string name="title_author">Автор</string>
    <string name="title_category">Категория:</string>
    <string name="title_country">Страна:</string>
    <string name="title_city">Город:</string>


</resources>