<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvSignTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/an_sign_up"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:text="@string/enter_your_email"
        android:textColor="@color/red"
        android:visibility="gone"
        android:id="@+id/tvEnterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignTitle" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etSignEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/tvEnterEmail" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etSignPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/etSignEmail"
        app:layout_constraintStart_toStartOf="@+id/etSignEmail"
        app:layout_constraintTop_toBottomOf="@id/etSignEmail" />

    <Button
        android:layout_marginBottom="16dp"
        android:text="@string/sign_up_action"
        android:id="@+id/btnSign"
        app:layout_constraintEnd_toEndOf="@+id/etSignEmail"
        app:layout_constraintStart_toStartOf="@+id/etSignEmail"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btnSignInWithGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.gms.common.SignInButton
        app:buttonSize="standard"
        android:id="@+id/btnSignInWithGoogle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@id/btnSign"
        app:layout_constraintStart_toStartOf="@id/btnSign"
        app:layout_constraintTop_toBottomOf="@+id/etSignPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:visibility="gone"
        android:text="@string/forget_password_action"
        android:id="@+id/btnForgetPassword"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etSignEmail"
        app:layout_constraintStart_toStartOf="@+id/etSignEmail"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btnSign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>