<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.sign.SignFragment">

    <TextView
        android:id="@+id/tvSignTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/an_sign_up"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:text="@string/enter_your_email"
        android:textColor="@color/red"
        android:visibility="gone"
        android:id="@+id/tvEnterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignTitle" />

    <com.google.android.material.textfield.TextInputEditText
        android:padding="12dp"
        android:background="@drawable/rounded_background_edit"
        android:id="@+id/etSignEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/tvEnterEmail" />

    <com.google.android.material.textfield.TextInputEditText
        android:padding="12dp"
        android:background="@drawable/rounded_background_edit"
        android:id="@+id/etSignPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/etSignEmail"
        app:layout_constraintStart_toStartOf="@+id/etSignEmail"
        app:layout_constraintTop_toBottomOf="@id/etSignEmail" />

    <Button
        android:padding="12dp"
        android:backgroundTint="@color/main_color"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_marginBottom="16dp"
        android:text="@string/sign_up_action"
        android:id="@+id/btnSign"
        app:layout_constraintEnd_toEndOf="@+id/etSignEmail"
        app:layout_constraintStart_toStartOf="@+id/etSignEmail"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btnSignInWithGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.gms.common.SignInButton
        android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
        app:buttonSize="standard"
        android:id="@+id/btnSignInWithGoogle"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="@id/btnSign"
        app:layout_constraintStart_toStartOf="@id/btnSign"
        app:layout_constraintTop_toBottomOf="@+id/etSignPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:visibility="gone"
        android:text="@string/forget_password_action"
        android:id="@+id/btnForgetPassword"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="@+id/etSignEmail"
        app:layout_constraintStart_toStartOf="@+id/etSignEmail"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btnSign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>