<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/cvSuccessItemDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardElevation="8dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clSuccessDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/clSuccessTop"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="@color/green_light">

                <ImageView
                    android:id="@+id/ivSuccess"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/rounded_back_dialog_success"
                    android:contentDescription="@null"
                    android:padding="12dp"
                    android:src="@drawable/ic_done"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/clSuccessTop"
                android:text="@string/success_d"
                android:id="@+id/tvSuccessTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/tvSuccessTitle"
                android:text="@string/success_d_text"
                android:id="@+id/tvSuccessText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/btnOkay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/main_color"
                android:text="@string/success_okay"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSuccessText"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>